# Neptune

Neptune/: .gitignore  OAUTH_SETUP.md  package-lock.json  package.json
Neptune/src/: App.css  App.tsx  oauth.ts
Neptune/src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
Neptune/src-tauri/capabilities/: default.json
Neptune/src-tauri/src/: config.rs  lib.rs  main.rs
Neptune/src-tauri/src/git/: commands.rs  mod.rs  types.rs
Neptune/src/components/: AddExistingRepoModal.tsx  AddRepoModal.tsx  AppBar.tsx  Dashboard.tsx  DashboardHeader.tsx  Repository-Grid.tsx  RepositoryCard.tsx  SideBar.tsx  glassButton.tsx
Neptune/src/components/ui/: badge.tsx  card.tsx  dialog.tsx  input.tsx  select.tsx
Neptune/src/lib/: supabase.ts
Neptune/src/pages/: Login.tsx  SettingConfig.tsx  StartPage.tsx
Neptune/src/pages/Home/: index.tsx
Neptune/src/store/: index.ts
Neptune/src/types/: Repository.ts
Neptune/supabase/migrations/: 20250626213842_add_repos_table.sql  20250627000000_add_users_insert_policy.sql
Neptune/supabase/types/: database.types.ts
