[package]
name = "neptune"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "neptune_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.20.2"
tauri-plugin-store = "2"
tauri-plugin-oauth = "2"
rand = "0.8"
url = "2.5"
reqwest = { version = "0.11", features = ["json"] }
tauri-plugin-shell = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-keychain = "2.0.2"
tauri-plugin-deep-link = "2"

